footer img adjust

--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,8 @@
 }
 
 #vtransparency {
-  max-width: 300px;
-  max-width: 100%;
+  max-width: 250px;
+  /*max-width: 100%;*/
 }
 
 #top-nav-title {
